--- a/NUS_DATATHON_CHAMPION_TEAM NAME.ipynb
+++ b/NUS_DATATHON_CHAMPION_TEAM NAME.ipynb
@@ -60,6 +60,131 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import RepeatedKFold\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "import pandas as pd\n",
+    "\n",
+    "df2 = pd.read_csv('cleaned_data.csv')\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    df2.drop(columns='Sales (Global Ultimate Total USD)'),\n",
+    "    df2['Sales (Global Ultimate Total USD)'],\n",
+    "    test_size=0.10,\n",
+    "    random_state=42\n",
+    "  )\n",
+    "\n",
+    "model = GradientBoostingRegressor()\n",
+    "\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install scikit-optimize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skopt import BayesSearchCV\n",
+    "\n",
+    "search_space = {\n",
+    "    'loss': ['squared_error', 'absolute_error', 'huber', 'quantile'],\n",
+    "    'learning_rate': [0.000001, 0.0001, 0.1, 1, 10],\n",
+    "    'n_estimators': [50, 100, 125, 150, 175, 200, 225, 250, 275, 300],\n",
+    "    'criterion': ['friedman_mse', 'squared_error'],\n",
+    "    'min_samples_split': [10, 50, 100, 125, 150, 200, 250, 300, 350, 400],\n",
+    "    'max_depth': [3, 4, 5, 6, 7, 8, 9, 10, 15, 20, 25, 30, 40, 50, 60, 70]\n",
+    "}\n",
+    "\n",
+    "opt = BayesSearchCV(\n",
+    "    GradientBoostingRegressor(),\n",
+    "    search_space,\n",
+    "    n_iter=5,\n",
+    "    verbose=3,\n",
+    "    cv=3\n",
+    ")\n",
+    "\n",
+    "opt.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_final = GradientBoostingRegressor(\n",
+    "    criterion='squared_error',\n",
+    "    learning_rate=0.1,\n",
+    "    loss='squared_error',\n",
+    "    max_depth=8,\n",
+    "    min_samples_split=300,\n",
+    "    n_estimators=250\n",
+    ")\n",
+    "\n",
+    "model_final.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = model_final.predict(X_test)\n",
+    "mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save the base model to an HDF5 file\n",
+    "joblib.dump(model_final, 'final_model.h5')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
